added pretty login form + backend logic, disactived js script

--- a/main/templates/main/HKMSA _ Home.html
+++ b/main/templates/main/HKMSA _ Home.html
@@ -11,7 +11,7 @@
       <link rel="preload" href="{% static 'HKMSA _ Home_files/ce5e123e3e21565e.css' %}" as="style">
       <link rel="stylesheet" href="{% static 'HKMSA _ Home_files/ce5e123e3e21565e.css' %}" data-n-g="">
       <noscript data-n-css=""></noscript>
-      <script defer="" nomodule="" src="{% static 'HKMSA _ Home_files/polyfills-5cd94c89d3acac5f.js' %}"></script>
+      <!-- <script defer="" nomodule="" src="{% static 'HKMSA _ Home_files/polyfills-5cd94c89d3acac5f.js' %}"></script>
        <script src="{% static 'HKMSA _ Home_files/webpack-5752944655d749a0.js' %}" defer=""></script>
        <script src="{% static 'HKMSA _ Home_files/framework-91d7f78b5b4003c8.js' %}" defer=""></script>
        <script src="{% static 'HKMSA _ Home_files/main-c077062ff4cba9cc.js' %}" defer=""></script>
@@ -33,7 +33,7 @@
       <link as="script" rel="prefetch" href="{% static 'HKMSA _ Home_files/shop-a5617e3332bf8878.js' %}">
       <link as="script" rel="prefetch" href="{% static 'HKMSA _ Home_files/893-71ae3053d6ec24ea.js' %}">
       <link as="script" rel="prefetch" href="{% static 'HKMSA _ Home_files/about-us-32877a0d75fa39e3.js' %}">
-      <link as="script" rel="prefetch" href="{% static 'HKMSA _ Home_files/register-4ed6f4268424e484.js' %}">
+      <link as="script" rel="prefetch" href="{% static 'HKMSA _ Home_files/register-4ed6f4268424e484.js' %}"> -->
    </head>
    <body>
       <div id="__next" data-reactroot="">
@@ -47,8 +47,8 @@
                       <a class="hover:bg-white hover:text-primary rounded-full px-4 py-2 duration-300" href="https://thehkmsa.com/life-in-hk/">Life in HK</a>
                       <a class="hover:bg-white hover:text-primary rounded-full px-4 py-2 duration-300" href="https://thehkmsa.com/scholarship/">Scholarship</a>
                       <a class="hover:bg-white hover:text-primary rounded-full px-4 py-2 duration-300" href="https://thehkmsa.com/shop/">Buy &amp; Sell</a>
-                      <a class="hover:bg-secondary bg-white hover:text-white text-primary rounded-full px-4 py-2 duration-300" href="https://thehkmsa.com/login/">Login</a>
-                      <a class="hover:bg-secondary bg-white hover:text-white text-primary rounded-full px-4 py-2 duration-300" href="https://thehkmsa.com/register/">Register</a></div>
+                      <a class="hover:bg-secondary bg-white hover:text-white text-primary rounded-full px-4 py-2 duration-300" href="/accounts/login">Login</a>
+                      <a class="hover:bg-secondary bg-white hover:text-white text-primary rounded-full px-4 py-2 duration-300" href="/accounts/signup">Register</a></div>
                   <button class="lg:hidden flex flex-col justify-center pr-3">
                       <span class="border-[1.5px] bg-white border-white w-7 rounded-full false transition-all duration-500"></span>
                       <span class="border-[1.5px] bg-white border-white w-7 rounded-full my-1 false transition-all duration-500"></span>
@@ -145,7 +145,7 @@
       <next-route-announcer>
          <p aria-live="assertive" id="__next-route-announcer__" role="alert" style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; overflow-wrap: normal;"></p>
       </next-route-announcer>
-      <script src="{% static 'HKMSA _ Home_files/membership-240f9735f05213b3.js' %}"></script>
+      <!-- <script src="{% static 'HKMSA _ Home_files/membership-240f9735f05213b3.js' %}"></script>
       <script src="{% static 'HKMSA _ Home_files/life-in-hk-108e4cabc3b5c09a.js' %}"></script>
       <script src="{% static 'HKMSA _ Home_files/7f0c75c1-9ba07d7da621f38d.js' %}"></script>
       <script src="{% static 'HKMSA _ Home_files/536-eb66e36e51739a98.js' %}"></script>
@@ -157,6 +157,6 @@
       <script src="{% static 'HKMSA _ Home_files/shop-a5617e3332bf8878.js' %}"></script>
       <script src="{% static 'HKMSA _ Home_files/893-71ae3053d6ec24ea.js' %}"></script>
       <script src="{% static 'HKMSA _ Home_files/about-us-32877a0d75fa39e3.js' %}"></script>
-      <script src="{% static 'HKMSA _ Home_files/register-4ed6f4268424e484.js' %}"></script>
+      <script src="{% static 'HKMSA _ Home_files/register-4ed6f4268424e484.js' %}"></script> -->
    </body>
 </html>
